<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a_header">Team A</string>
    <string name="team_a_score">0</string>
    <string name="_3_points_btn">+3 Points</string>
    <string name="_2_points_btn">+2 Points</string>
    <string name="free_throw_btn">Free Throw</string>
    <string name="team_b_header">Team B</string>
    <string name="team_b_score">0</string>
    <string name="reset_btn">reset</string>
</resources>
